--- a/.editorconfig
+++ b/.editorconfig
@@ -28,6 +28,10 @@ indent_size = 2
 [*.{yaml,yml}]
 indent_size = 2
 
+# Powershell files
+[*.ps1]
+indent_size = 2
+
 # JSON files
 [*.json]
 indent_size = 2
