--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -43,7 +43,10 @@ steps:
     projects: Ix.NET/Source/**/*.Tests.csproj
     arguments: -c $(BuildConfiguration) --collect:"Code Coverage" -s $(System.DefaultWorkingDirectory)/Ix.NET/Source/CodeCoverage.runsettings /p:DebugType=Full 
   displayName: Run Tests
-  
+
+- task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@18
+  displayName: 'WhiteSource Bolt'
+
 - task: PowerShell@2
   displayName: Authenticode Sign Packages
   inputs:
