--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -9,6 +9,17 @@ trigger:
       - .editorconfig
       - azure-pipelines.rx.yml
 
+pr:
+  branches:
+    include:
+    - master
+    - rel/*
+  paths:
+    include:
+      - Rx.NET/Source/*
+      - .editorconfig
+      - azure-pipelines.rx.yml
+
 pool:
   vmImage: vs2017-win2016
 
@@ -23,11 +34,9 @@ steps:
     custom: tool
     arguments: install --tool-path . nbgv
   displayName: Install NBGV tool
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
 
 - script: nbgv cloud -a -p Rx.NET\Source
   displayName: Set Version
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
 
 - task: MSBuild@1
   displayName: Build System.Reactive.sln
@@ -43,7 +52,6 @@ steps:
   inputs:
     command: custom
     arguments: pack Rx.NET/Source/facades/System.Reactive.Compatibility.nuspec -Version $(NBGV_NuGetPackageVersion) -MinClientVersion 2.12 -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
-  condition: eq(variables['system.pullrequest.isfork'], false)
 
 - task: MSBuild@1
   displayName: Build for Test (ppdb) workaround
@@ -86,4 +94,4 @@ steps:
     PathtoPublish: $(Build.ArtifactStagingDirectory)\artifacts
     ArtifactName: artifacts
     publishLocation: Container
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+
