--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -34,9 +34,11 @@ steps:
     custom: tool
     arguments: install --tool-path . nbgv
   displayName: Install NBGV tool
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
 
 - script: nbgv cloud -a -p Rx.NET\Source
   displayName: Set Version
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
 
 - task: MSBuild@1
   displayName: Build System.Reactive.sln
@@ -52,7 +54,8 @@ steps:
   inputs:
     command: custom
     arguments: pack Rx.NET/Source/facades/System.Reactive.Compatibility.nuspec -Version $(NBGV_NuGetPackageVersion) -MinClientVersion 2.12 -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
-
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+  
 - task: MSBuild@1
   displayName: Build for Test (ppdb) workaround
   inputs:
