--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -33,11 +33,9 @@ steps:
     custom: tool
     arguments: install --tool-path . nbgv
   displayName: Install NBGV tool
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
 
 - script: nbgv cloud -p Ix.NET\Source
   displayName: Set Version
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
 
 - task: DotNetCoreCLI@2
   inputs:
@@ -57,6 +55,7 @@ steps:
 
 - task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@18
   displayName: 'WhiteSource Bolt'
+  enabled: false
 
 - task: PowerShell@2
   displayName: Authenticode Sign Packages
@@ -73,4 +72,3 @@ steps:
     PathtoPublish: $(Build.ArtifactStagingDirectory)\artifacts
     ArtifactName: artifacts
     publishLocation: Container
-  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
