--- a/Rx.NET/Integration/NuGet.Config
+++ b/Rx.NET/Integration/NuGet.Config
@@ -4,6 +4,6 @@
     <add key="myget.org rxnet" value="https://dotnet.myget.org/F/rx/api/v3/index.json" />
     <add key="Build Packages" value="https://www.myget.org/F/c037199d-41df-4567-b966-25ff65324688/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="Local Packages" value=".\LocalPackages" />
+    <add key="Local Packages" value="./LocalPackages" />
   </packageSources>  
 </configuration>
