--- a/Ix.NET/Source/System.Linq.Async/System.Linq.Async.csproj
+++ b/Ix.NET/Source/System.Linq.Async/System.Linq.Async.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;net46;netstandard1.4;netstandard2.0</TargetFrameworks>
+    <Configurations>Debug;Release;Debug_CSharp8;Release_CSharp8</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
