Getting rid of USE_AWAIT_USING to ensure proper binding for ConfigureAwait(false).

--- a/Ix.NET/Source/Directory.build.targets
+++ b/Ix.NET/Source/Directory.build.targets
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DefineConstants>$(DefineConstants);USE_AWAIT_FOREACH;USE_AWAIT_USING</DefineConstants>
+    <DefineConstants>$(DefineConstants);USE_AWAIT_FOREACH</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup>
