--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -30,7 +30,7 @@ variables:
 steps:
 - task: DotNetCoreInstaller@0
   inputs:
-    version: '3.0.100-preview-010184'
+    version: '3.0.100-preview4-010374'
 
 - task: DotNetCoreCLI@2  
   inputs:
