--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -55,7 +55,7 @@ steps:
   inputs:
     command: test
     projects: Ix.NET/Source/**/*.Tests.csproj
-    arguments: -c $(BuildConfiguration) --collect:"Code Coverage" -s $(System.DefaultWorkingDirectory)/Ix.NET/Source/CodeCoverage.runsettings /p:DebugType=Full 
+    arguments: -c $(BuildConfiguration) --collect:"Code Coverage" -s $(System.DefaultWorkingDirectory)/Ix.NET/Source/CodeCoverage.runsettings
   displayName: Run Tests
 
 - task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@18
