add explicit restore step

--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -44,6 +44,12 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
+    command: restore
+    projects: Ix.NET/Source/**/*.csproj 
+  displayName: Restore
+
+- task: DotNetCoreCLI@2
+  inputs:
     command: pack
     packagesToPack: Ix.NET/Source/**/System.Interactive*.csproj;Ix.NET/Source/**/System.Linq.*.csproj;!Ix.NET/Source/**/*.Tests*.csproj;!Ix.NET/Source/refs/**
     configuration: $(BuildConfiguration)
