Disable code coverage for now given that it's flaky
https://github.com/Microsoft/vstest/issues/1926

--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -61,7 +61,7 @@ steps:
   inputs:
     command: test
     projects: Ix.NET/Source/**/*.Tests.csproj
-    arguments: -c $(BuildConfiguration) --collect:"Code Coverage" -s $(System.DefaultWorkingDirectory)/Ix.NET/Source/CodeCoverage.runsettings /p:DebugType=Full
+    arguments: -c $(BuildConfiguration) -s $(System.DefaultWorkingDirectory)/Ix.NET/Source/CodeCoverage.runsettings /p:DebugType=Full
   displayName: Run Tests
 
 - task: PowerShell@2
