Add code coverage with coverlet

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ stylecop.*
 artifacts/
 Generated_Code #added for RIA/Silverlight projects
 ApiApprovalTests.*.received.txt
+coverlet/
 
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
