--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -66,9 +66,9 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    command: clean
+    command: custom
+    custom: clean
     projects: Ix.NET/Source/**/*.csproj
-    arguments: -c $(BuildConfiguration) 
   displayName: Clean for test
 
 - task: DotNetCoreCLI@2
