--- a/Ix.NET/Source/Directory.build.targets
+++ b/Ix.NET/Source/Directory.build.targets
@@ -28,6 +28,7 @@
     <CoverletOutputFormat>cobertura</CoverletOutputFormat>
     <Exclude>[xunit.*]*</Exclude>
     <CoverletOutput>$(MSBuildThisFileDirectory)coverlet/raw/$(AssemblyName)/$(TargetFramework)/</CoverletOutput>
+    <CollectCoverage Condition="'$(TF_BUILD)' == 'true' and '$(TargetFramework)' != 'net461' ">true</CollectCoverage>
   </PropertyGroup>
 
 </Project>
