--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -1,4 +1,4 @@
-trigger:
+ntrigger:
   branches:
     include:
       - master
@@ -22,7 +22,7 @@ pr:
       - azure-pipelines.ix.yml
 
 pool:
-  vmImage: vs2017-win2016
+  vmImage: windows-2019
 
 variables: 
   BuildConfiguration: Release
